--- a/memo/memo.tex
+++ b/memo/memo.tex
@@ -20,7 +20,7 @@
 \newcommand\argmin{\operatornamewithlimits{arg\,min}}
 \newcommand\argmax{\operatornamewithlimits{arg\,max}}
 
-\author{Amir Kosrowshahi, Urs K\"oster}
+\author{Amir Khosrowshahi, Urs K\"oster}
 \title{Convolutional Sparse Coding}
  
 \begin{document}
